# qanta-buzzer

./: .agentic.yml  .continue-here  .gitignore  2026-03-13-120428-qanta-buzzer-optimization-cc-transcript.txt  2026-03-13-130625-qanta-buzzer-optimization-cc-transcript2.txt  2026-03-13-195118-qanta-buzzer-optimization-cc-transcript3.txt  AGENTS.md  CLAUDE.md  IMPLEMENTATION_README.md  PRESENTATION.md  PRESENTATION_SCRIPT.md  PRESENTATION_SCRIPT2.md  PRESENTATION_SCRIPT_FINAL.md  PROJECT_OVERVIEW.md  README.md  chatgpt_extensions_prompt.md  cursor_poster_readability_improvement.md  cursor_repo_audit_and_remediation_check.md  demo.py  generate_dataflow_animation.py  generate_poster.py  generate_presentation.py  icme-research-symposium-poster-template-2024-1.pptx  metrics.py  model.py  pyproject.toml  requirements.txt  run.sh  test_csv_loader.py  test_dataset.json  train_dataset.json  train_ppo.py  verify_data_loader.py  walkthrough.md  ~$icme-research-symposium-poster-template-2024-1.pptx
.claude/: gsd-file-manifest.json
.github/: copilot-instructions.md
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md
_legacy/: config.py  dataset.py  environment.py  main.py  model.py  test_imports.py  train_ppo.py  train_supervised.py  visualize.py
agents/: __init__.py  _math.py  bayesian_buzzer.py  ppo_buzzer.py  softmax_profile_buzzer.py  threshold_buzzer.py
configs/: default.yaml  smoke.yaml  t5_policy.yaml
data/: processed_dataset.json  test_questions.csv  val_dataset.json
docs/: cursor_reconciliation_process_for_upstr.md  (+3 more)
(+206 files in other folders)
