[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qanta-buzzer"
version = "1.0.0"
description = "Unified quiz bowl RL buzzer system for Stanford CS234"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "datasets>=2.14.0",
  "gymnasium>=1.1.0",
  "jsonlines>=3.1.0",
  "matplotlib>=3.7.0",
  "numpy>=1.24.0",
  "pandas>=2.0.0",
  "PyYAML>=6.0.0",
  "scikit-learn>=1.3.0",
  "seaborn>=0.12.0",
  "sentence-transformers>=2.2.0",
  "stable-baselines3>=2.6.0",
  "torch>=2.0.0",
  "tqdm>=4.65.0",
  "transformers>=4.30.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
maskable = ["sb3-contrib>=2.6.0"]
dspy = ["dspy>=2.5.0"]

[tool.setuptools.packages.find]
include = ["agents", "evaluation", "models", "qb_data", "qb_env", "training"]

[tool.pytest.ini_options]
testpaths = ["tests"]
